# primer-parcial-cobresi-nanfara

./: CMakeLists.txt  README.md  main.cpp  main_nave.cpp  raylibTemplate.data  raylibTemplate.js  raylibTemplate.js.orig.js  raylibTemplate.wasm
clases/: Audio.cpp  Audio.h  Bar_Life.cpp  Bar_Life.h  Button.cpp  Button.h  Cartoonist.cpp  Cartoonist.h  Decorator.h  EndState.cpp  EndState.h  FrameManager.cpp  FrameManager.h  GameState.cpp  GameState.h  LightMonkey.cpp  LightMonkey.h  LightRama.cpp  LightRama.h  LightThemeFactory.cpp  LightThemeFactory.h  Manager.cpp  Manager.h  Map.cpp  Map.h  MenuElement.cpp  MenuElement.h  MenuElements.cpp  MenuElements.h  MenuState.cpp  MenuState.h  Monkey.cpp  Monkey.h  NightMonkey.cpp  NightMonkey.h  NightRama.cpp  NightRama.h  NightThemeFactory.cpp  NightThemeFactory.h  Rama.cpp  (+18 more)
cmake/: raylib_web.cmake
html/: 00__drturtle__screens_8c.html  01__drturtle__scrolling_8c.html  02__drturtle__player_8c.html  03__drturtle__enemies_8c.html  04__drturtle__gui_8c.html  05__drturtle__audio_8c.html  06__drturtle__final_8c.html  4coder_2main_8c.html  __deps_2raylib-build_2src_2_c_make_files_2raylib__static_8dir_2link_8txt.html  __deps_2raylib-build_2src_2external_2glfw_2src_2_c_make_files_2glfw_8dir_2link_8txt.html  __deps_2raylib-src_2src_2config_8h.html  __deps_2raylib-src_2src_2config_8h_source.html  __deps_2raylib-subbuild_2_c_make_cache_8txt.html  __deps_2raylib-subbuild_2_c_make_files_2_target_directories_8txt.html  __mingw__dxhelper_8h.html  __mingw__dxhelper_8h_source.html  _a_n_g_l_e_2_k_h_r_2khrplatform_8h.html  _a_n_g_l_e_2_k_h_r_2khrplatform_8h_source.html  _app_8cpp.html  _app_8h.html  _app_8h_source.html  _audio_8h.html  _audio_8h_source.html  _b_i_n_d_i_n_g_s_8md.html  _bar___life_8cpp.html  _bar___life_8h.html  _bar___life_8h_source.html  _base_app_8h.html  _base_app_8h_source.html  _button_8cpp.html  _button_8h.html  _button_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_files_2_target_directories_8txt.html  _c_make_files_2raylib_template_8dir_2link_8txt.html  _c_make_lists_8txt.html  _c_make_options_8txt.html  _c_make_rule_hashes_8txt.html  (+2055 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.html  all_19.js  all_1a.html  all_1a.js  all_1b.html  (+311 more)
latex/: 00__drturtle__screens_8c.tex  01__drturtle__scrolling_8c.tex  02__drturtle__player_8c.tex  03__drturtle__enemies_8c.tex  04__drturtle__gui_8c.tex  05__drturtle__audio_8c.tex  06__drturtle__final_8c.tex  4coder_2main_8c.tex  __deps_2raylib-build_2src_2_c_make_files_2raylib__static_8dir_2link_8txt.tex  __deps_2raylib-build_2src_2external_2glfw_2src_2_c_make_files_2glfw_8dir_2link_8txt.tex  __deps_2raylib-src_2src_2config_8h.tex  __deps_2raylib-subbuild_2_c_make_cache_8txt.tex  __deps_2raylib-subbuild_2_c_make_files_2_target_directories_8txt.tex  __mingw__dxhelper_8h.tex  _a_n_g_l_e_2_k_h_r_2khrplatform_8h.tex  _app_8cpp.tex  _app_8h.tex  _audio_8h.tex  _b_i_n_d_i_n_g_s_8md.tex  _bar___life_8cpp.tex  _bar___life_8h.tex  _base_app_8h.tex  _button_8cpp.tex  _button_8h.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_cache_8txt.tex  _c_make_files_2_target_directories_8txt.tex  _c_make_files_2raylib_template_8dir_2link_8txt.tex  _c_make_options_8txt.tex  _c_make_rule_hashes_8txt.tex  _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _decorator_8h.tex  _duck__license_8txt.tex  _end_state_8cpp.tex  _end_state_8h.tex  _game_state_8cpp.tex  _game_state_8h.tex  _h_i_s_t_o_r_y_8md.tex  _l_i_c_e_n_s_e_8md.tex  (+1158 more)
